2006-06-06  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/stepmake/topdocs-targets.make (make-txt-files): define
	make-txt-files target.

	* stepmake/stepmake/toplevel-targets.make (do-top-doc): use
	make-txt-files target.

	* configure.in (LINK_GXX_STATICALLY): $srcdir for readlink.py

	* stepmake/stepmake/generic-vars.make (distdir): create dist in
	top-build-dir.

2006-06-06  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly: Rewrote \versus and \responsum in order to
	fix lyrics alignment problems.  They are implemented now as scheme
	functions that add the appropriate unicode char to the first lyric
	event rather than adding a separate lyric event.

2006-06-06  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in (dist-toplevel-txt-files): new target. Don't
	pollute src dir with built .txt files, but install directly from
	Documentation/topdocs/out/

	* buildscripts/output-distance.py
	(ComparisonData.create_html_result_page): put version/directories
	in table header.

	* Documentation/topdocs/NEWS.tely (Top): document spacing section
	feature.

	* configure.in (LINK_GXX_STATICALLY): use readlink.py to resolve links.
	Patch by Karl Hammar
	
	* buildscripts/readlink.py: add  file.
	Patch by Karl Hammar

2006-06-06  Joe Neeman  <joeneeman@gmail.com>

	* lily/tuplet-number.cc (print): prevent stencil from being
	garbage collected.

2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/stencil.scm (write-system-signature): explicitly 
	-well, superfluously- close output port.

	* buildscripts/output-distance.py (main): oops. Add extra argument.

2006-06-05  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/music-glossary.tely: clarified example
	from Francisco Vila, thanks!

2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/spacing-section.ly: new file.

	* lily/input.cc (programming_error): new function.

	* lily/spacing-engraver.cc (try_music): new function. Accept
	spacing-section-event
